--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
-                    android:hint="Email" />
+                    android:hint="@string/user_email" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    android:hint="Password"
+                    android:hint="@string/password"
                     android:minEms="6"
                     android:imeOptions="actionGo"/>
             </android.support.design.widget.TextInputLayout>
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:background="@color/colorPrimary"
-                android:text="Login"
+                android:text="@string/btn_login"
                 android:textColor="@android:color/white"
                 android:onClick="login"/>
 
@@ -72,11 +72,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@null"
-                android:text="Not a member? Register here."
+                android:background="@android:color/transparent"
+                android:text="@string/btn_link_to_register"
                 android:textAllCaps="false"
                 android:textColor="@color/colorAccent"
-                android:textSize="15dp"
+                android:textSize="14sp"
                 android:onClick="linkToRegister"/>
         </LinearLayout>
     </RelativeLayout>
