--- a/app/src/main/res/layout/activity_add_new_business.xml
+++ b/app/src/main/res/layout/activity_add_new_business.xml
@@ -36,7 +36,7 @@
             android:id="@+id/inputBusinessName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Business Name"
+            android:hint="@string/business_name"
             android:inputType="textCapWords" />
     </android.support.design.widget.TextInputLayout>
 
@@ -48,7 +48,7 @@
             android:id="@+id/inputBusinessAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Address" />
+            android:hint="@string/business_address" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:hint="Phone"/>
+            android:hint="@string/business_phone"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Select Business Category" />
+            android:text="@string/select_business_category" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -90,7 +90,7 @@
             android:textColor="@android:color/white"
             android:background="@color/colorPrimaryLight"
             android:inputType="number"
-            android:text="Add Business"
+            android:text="@string/btn_add_business"
             android:onClick="addNewBusinessOnClick"/>
 
 
