--- a/app/src/main/res/layout/activity_load_memcached_cashier.xml
+++ b/app/src/main/res/layout/activity_load_memcached_cashier.xml
@@ -19,5 +19,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Getting data from server..."/>
+        android:text="@string/getting_data"/>
 </RelativeLayout>
