--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -1,47 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp">
-
-
+    android:layout_height="match_parent">
         <TextView
             android:id="@+id/titleEditCustomer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Update Password"
+            android:layout_marginTop="15dp"
+            android:text="@string/btn_change_password"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
-            android:textSize="24dp"
+            android:textSize="24sp"
             android:textAlignment="center"/>
+        <View
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#c0c0c0"/>
 
-        <EditText
-            android:layout_marginTop="15dp"
-            android:id="@+id/inputOldPassword"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:hint="Old Password" />
+            android:orientation="vertical"
+            android:padding="10dp">
+                <EditText
+                    android:id="@+id/inputOldPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:hint="@string/user_old_password" />
 
-        <EditText
-            android:id="@+id/inputNewPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:hint="New Password" />
+                <EditText
+                    android:id="@+id/inputNewPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/user_new_password"
+                    android:inputType="textPassword" />
 
-        <EditText
-            android:id="@+id/inputConfirmNewPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:hint="Confirm New Password" />
+                <EditText
+                    android:id="@+id/inputConfirmNewPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPassword"
+                    android:hint="@string/user_confirm_password" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/btnSubmitPassword"
@@ -50,8 +55,8 @@
             android:background="@color/colorPrimaryLight"
             android:textColor="@android:color/white"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="Submit" />
+            android:layout_marginTop="10dp"
+            android:text="@string/btn_submit" />
 
 
 
