--- a/app/src/main/res/layout/dialog_search_customer.xml
+++ b/app/src/main/res/layout/dialog_search_customer.xml
@@ -1,30 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/titleSearchCustomer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="@string/txt_title_search_member"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:textAlignment="center"/>
+    <View
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#c0c0c0"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
         <EditText
             android:id="@+id/inputSearchMember"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Search Name" />
+
         <Button
             android:id="@+id/btnSearchMember"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Search"/>
+            android:background="@color/colorPrimaryLight"
+            android:textColor="@android:color/white"
+            android:text="@string/btn_search"/>
     </LinearLayout>
 
     <ListView
         android:id="@+id/listMember"
         android:layout_width="match_parent"
-        android:layout_height="400dp"></ListView>
+        android:layout_height="400dp"
+        android:background="@android:color/white"></ListView>
 </LinearLayout>
