--- a/app/src/main/res/layout/fragment_cash_in.xml
+++ b/app/src/main/res/layout/fragment_cash_in.xml
@@ -35,7 +35,9 @@
                android:id="@+id/btnLinkToAddCashIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
-               android:text="Add Cash In"/>
+               android:background="@color/colorPrimaryLight"
+               android:textColor="@android:color/white"
+               android:text="@string/btn_add_cash_in"/>
        </LinearLayout>
 
    </LinearLayout>
