--- a/app/src/main/res/layout/list_item_cashier_product.xml
+++ b/app/src/main/res/layout/list_item_cashier_product.xml
@@ -3,7 +3,6 @@
     android:orientation="vertical" 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
 
     <ImageView
         android:layout_width="100dp"
@@ -18,6 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Product Name"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="@android:color/black"
         android:textStyle="bold"
         android:layout_gravity="center"/>
