--- a/app/src/main/res/layout/list_item_bill.xml
+++ b/app/src/main/res/layout/list_item_bill.xml
@@ -28,6 +28,7 @@
                 android:textColor="@android:color/black"
                 />
             <LinearLayout
+                android:id="@+id/layoutQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:orientation="horizontal"
